<resources>
    <string name="app_name">CommandOpen</string>
    <string name="copy">复制</string>
    <string name="receiving_command">接收指令中……</string>
    <string name="sender_email">请输入发件邮件</string>
    <string name="sender_email_auth">发件邮箱授权码</string>
    <string name="receiver_email">请输入收件邮箱</string>
    <string name="test_mail_conf">测试邮箱配置</string>
    <string name="save_setting">保存配置</string>

    <string name="receiver_regId">目标手机regId,在要接收指令手机上安装本应用后查看</string>
    <string name="receiver_reg_hind">请输入目标手机的推送regId</string>

    <string name="cur_target">当前发送目标</string>
    <string name="send_open_ding">发送打开钉钉指令</string>
    <string name="send_get_status">发送获取手机状态指令</string>
    <string name="send_test">发送测试指令</string>
    <string name="go_email_setting">指令接收端配置</string>
    <string name="go_reg_id_setting">指令发送端配置</string>
    <string name="set_as_host">发送指令视图</string>
    <string name="set_as_target">接收端</string>
</resources>