<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable
            name="vm"
            type="com.stardust.co.vm.ReceiverSettingVM" />
    </data>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="12dp">
        <TextView
            android:id="@+id/tv_reg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:text="@string/receiver_regId"/>
        <EditText
            android:id="@+id/et_regId"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:importantForAutofill="no"
            android:inputType="text"
            android:text="@={vm.receiverReg}"
            android:layout_marginTop="20dp"
            app:layout_constraintTop_toBottomOf="@id/tv_reg"
            android:hint="@string/receiver_reg_hind"/>
        <Button
            android:id="@+id/btn_save_reg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/et_regId"
            android:enabled="@{vm.receiverReg.length()>9}"
            android:layout_marginTop="20dp"
            android:text="@string/save_setting"
            android:textColor="@color/white"
            android:backgroundTint="@color/primary"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>