<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable
            name="vm"
            type="com.stardust.co.vm.MailSettingVM" />
    </data>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="12dp">
        <LinearLayout
            android:id="@+id/ll_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sender_email"/>
                <EditText
                    android:id="@+id/et_sender_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="12dp"
                    android:text="@={vm.senderEmail}"
                    android:hint="@string/sender_email"
                    android:autofillHints="emailAddress"
                    android:inputType="textEmailAddress"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sender_email_auth"/>
                <EditText
                    android:id="@+id/et_sender_auth"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="12dp"
                    android:text="@={vm.senderAuth}"
                    android:hint="@string/sender_email_auth"
                    android:autofillHints="password"
                    android:inputType="textPassword"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/receiver_email"/>
                <EditText
                    android:id="@+id/et_receiver_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="12dp"
                    android:text="@={vm.receiverEmail}"
                    android:hint="@string/receiver_email"
                    android:autofillHints="emailAddress"
                    android:inputType="textEmailAddress"/>
            </LinearLayout>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:text="本机推送注册id(regId:):a12bssasdfa"
                android:gravity="center_horizontal"
                android:layout_marginTop="12dp"
                android:text="@{`本机推送注册id(regId:):`+vm.regId}"/>
            <Button
                android:id="@+id/btn_copy2_clipboard"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/Widget.AppCompat.Button.Borderless.Colored"
                android:text="@string/copy"/>
        </LinearLayout>
        <Button
            android:id="@+id/btn_test_mail_conf"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/ll_form"
            android:enabled="@{vm.inputValid}"
            android:layout_marginTop="18dp"
            android:text="@string/test_mail_conf"/>
        <Button
            android:id="@+id/btn_save_mail_conf"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/btn_test_mail_conf"
            android:enabled="@{vm.inputValid}"
            android:layout_marginTop="12dp"
            android:textColor="@color/white"
            android:backgroundTint="@color/primary"
            style="@style/Widget.AppCompat.Button"
            android:text="@string/save_setting"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>